--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=3001
+MONGODB_CNN=mongodb+srv://mongo_coffee:6BQHlEW4uy8MCWuU@cluster0.ptwju.mongodb.net/NotesDB
+
+USER=mongo_coffee
+PASS=6BQHlEW4uy8MCWuU
