add Json Web Token

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MONGODB_CNN=mongodb+srv://mongo_coffee:6BQHlEW4uy8MCWuU@cluster0.ptwju.mongodb.n
 
 USER=mongo_coffee
 PASS=6BQHlEW4uy8MCWuU
+
+SECRETORPRIVATEKEY=16j4m41c416
