google Auth added

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ USER=mongo_coffee
 PASS=6BQHlEW4uy8MCWuU
 
 SECRETORPRIVATEKEY=16j4m41c416
+
+GOOGLE_CLIENT_ID=188844685764-mracgfr8af5av21u6l16ijcgk4rpe4nr.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
