fileupload to cloudinary

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ SECRETORPRIVATEKEY=16j4m41c416
 
 GOOGLE_CLIENT_ID=188844685764-mracgfr8af5av21u6l16ijcgk4rpe4nr.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+
+CLOUDINARY_URL=cloudinary://746578363883131:4kKfWMGFQsE9c45O9HwTDWoCVKQ@jonmenez
